# Pravardha

./: .env.example  .gitignore  ARCHITECTURE.md  CNAME  FILE_REFERENCE.md  LICENSE  Makefile  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  package-lock.json
chain/: Anchor.toml  README.md  package.json
chain/programs/pravardha/: Cargo.toml
chain/programs/pravardha/src/: lib.rs
firmware/: OLED_SETUP.md  README.md
firmware/pravardha_esp32/: pravardha_esp32.ino
scripts/: anchor_submit.ts  compute_merkle_and_anchor.ts  package-lock.json  package.json  register_device.ts  seed_device.ts
supabase/: README.md
supabase/functions/cron_rollup/: index.ts
supabase/functions/ingest/: index.ts
supabase/migrations/: 001_init.sql  002_aggregates.sql
web/: .env.example  README.md  index.html  package-lock.json  package.json
web/src/: App.tsx  index.css
web/src/lib/: supabaseClient.ts
web/src/pages/: Batches.tsx  Dashboard.tsx  Verify.tsx
