[package]
name = "pravardha"
version = "0.1.0"
description = "Pravardha IoT data anchoring program"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "pravardha"

[features]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
cpi = ["no-entrypoint"]
default = []
idl-build = ["anchor-lang/idl-build"]  # ← ADD THIS LINE

[dependencies]
anchor-lang = "0.32.1"

[dev-dependencies]
solana-program-test = "1.18"
solana-sdk = "1.18"
